# radiance

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  WORKSPACE  conanfile.py
configured_files/: config.hpp.in
dotfiles/.devcontainer/: Dockerfile  devcontainer.json
dotfiles/.devcontainer/library-scripts/: docker-debian.sh
hello-shaders/: BUILD  hello-shaders.cpp  shader.hpp
hello-shaders/shader-src/: shader.vs
hello-texture/: CMakeLists.txt
hello-triangle/: BUILD  hello-triangle.cpp
resources/shader/: default.vs  lit-texture.fs  shader-texture.fs  shader-texture.vs  shader1.vs  unlit-color-attribute.vs
src/: CMakeLists.txt  main.cpp
src/camera/: CMakeLists.txt
src/camera/include/: fly-camera.hpp
src/drawable/: CMakeLists.txt  hello-drawable.cpp
src/drawable/include/: drawable.hpp  factory.hpp
src/executable/: CMakeLists.txt  hello-drawable.cpp
src/hello-shader/: CMakeLists.txt  hello-shader.cpp
src/hello-shader/private/: shader.hpp
src/hello-texture/: CMakeLists.txt  hello-texture.cpp
src/hello-triangle/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt  hello-math.cpp
src/math/include/: mat4.hpp  math.hpp  vec3.hpp
src/radiance/: CMakeLists.txt  radiance.cpp
src/radiance/include/: data.hpp
src/shader/: CMakeLists.txt  hello-shader.cpp
src/shader/include/: shader.hpp
src/texture/: CMakeLists.txt  texture.cpp
src/texture/include/: texture.hpp
src/window/: CMakeLists.txt
src/window/include/: window.hpp
